--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,12 +11,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
-      - name: Create env file
-        run: |
-          touch .env
-          echo DOMAIN=${{ secrets.DOMAIN }} >> .env
-          cat .env
 
       - name: Docker run
-        run: docker compose up -d --force-recreate --build
+        run: docker-compose up -d --force-recreate --build
